--- a/calibration.tex
+++ b/calibration.tex
@@ -35,7 +35,7 @@ as function of height in the liquid. Silicon diode sensors with accuracy as litt
 To measure and calibrate electric field, purity, electron lifetime and drift speed in-situ, a laser system and a muon detector are foreseen. 
 Both systems, each with particular pros and cons use ionization-particle paths to measure the above quantities.\\
 %
-The laser calibration system employs a high power ultra-violet (UV) laser to ionize the liquid argon. The 266 nm UV photons have energy of 4.66 eV. Three photons could excite one argon molecule (ionization potential for liquid argon is 13.78 eV). 
+The {\bf laser calibration system} employs a high power ultra-violet (UV) laser to ionize the liquid argon. The 266 nm UV photons have energy of 4.66 eV. Three photons could excite one argon molecule (ionization potential for liquid argon is 13.78 eV). 
 A laser beam is directed into the TPC region via a steerable feedthrough, which allows to reflect the laser beam to various regions of the 
 active detector volume. 
 The laser energy is about 10 mJ, which corresponds to 10$^{16}$ UV photons, and has sufficient energy to produce 
