--- a/installation.tex
+++ b/installation.tex
@@ -1,12 +1,12 @@
-\subsubsection{Installation}
+\subsection{Installation}
 
 The interior of the cryostat will be prepared prior to the installation of the TPC.  A series of I-beam support rails will be suspended below the top surface of the cryostat membrane by a series of hangers.  These hangers will be structurally supported by an independant structure above the cryostat.  Decoupling the TPC support from the cryostat structure eliminates the movement of the TPC with the flexure of the cryostat structure from the filling and internal pressure changes of the Argon inside.  The hangers will pass through the top of the cryostat to the independant structure inside a bellows type feed-through.  These feed-throughs need to be designed to minimize the heat gain into the cryogenic volume.  For the CPAs, the support rails and hangers need to be electrically isolated due to high voltage concerns.  To preserve the ability to reverse the order of the TPC components, all of the support points will be designed to the maximum set of requirements regarding loads and clearances.  
 
-There will be a series of feed-through flanges located along each of the support rails.  These will be cryogenic flanges where the services for the TPC components can pass through the top of the cryostat.  It is foreseen that each CPA row will require one feed-through for the high voltage probe to bring in the drift voltage.  The drift voltage is 500 V/cm.  For a drift distance of 2.5m and 3.6m, the probe voltages will be 125kV and 180kV respectively.  There will be one service feed-through for each of the APAs.  These feed-throughs will include high speed data, bias voltages for the wire planes, control and power for the cold electronics.  
+There will be a series of feed-through flanges located along each of the support rails.  These will be cryogenic flanges where the services for the TPC components can pass through the top of the cryostat.  It is foreseen that each CPA row will require one feed-through for the high voltage probe to bring in the drift voltage.  The drift voltage is 500 V/cm.  For a drift distance of 3.6~m and 2.5~m, the probe voltages will be 180~kV and 125~kV respectively.  There will be one service feed-through for each of the APAs.  These feed-throughs will include high speed data connections, bias voltages for the wire planes, control and power for the cold electronics.  
 
 The main TPC components will be installed through large hatches in the top of the cryostat.  This is 
-similar to the installation method intended for the detector at the far site.  These hatches will have an 
-aperture approximately 2.0 m wide and 3.5 m long.  Each APA and CPA panel will be carefully tested after transport into the clean area and before installation into one of the cryostats. Immediately after a panel is installed it will be rechecked. The serial installation of the APAs along the rails means that removing and replacing one of the early panels in the row after others are installed would be very costly in effort and time. Therefore, to minimize the risk of damage, as much work around already installed panels as possible will be completed before proceeding with further panels.
+similar to the installation method intended for the detector at the DUNE far site.  These hatches will have an 
+aperture approximately 2.0 m wide and 3.5 m long.  Each APA and CPA panel will be carefully tested after transport into the clean area and before installation into the cryostat. Immediately after a panel is installed it will be rechecked. The serial installation of the APAs along the rails means that removing and replacing one of the early panels in the row after others are installed would be very costly in effort and time. Therefore, to minimize the risk of damage, as much work around already installed panels as possible will be completed before proceeding with further panels.
 The installation sequence is planned to proceed as follows:
 
 \begin{enumerate}
