--- a/cryo.tex
+++ b/cryo.tex
@@ -1,7 +1,7 @@
 \label{cryo}
 \subsection{Cryostat}
 
-
+%{\color{red} BALANCE BETWEEN CRYOSTAT AND CRYOGENICS SECTIONS MAY HAVE TO BE ADJUSTED ... ?!}
 
 %\subsection{Cryostat size from TPC dimensions }
 
